[gd_scene load_steps=5 format=3 uid="uid://bias2iw0tc2e6"]

[ext_resource type="Texture2D" uid="uid://d378y86gx6hur" path="res://Art/Pixel_Brown.png" id="1_40r2h"]
[ext_resource type="Script" uid="uid://ctkh5y6pu3tot" path="res://Scenes/lobby_game_info_panel.gd" id="1_cdjeb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jigxi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4233d"]

[node name="LobbyGameInfoPanel" type="PanelContainer" node_paths=PackedStringArray("MapImg", "GameName", "GameType", "GameDetails")]
script = ExtResource("1_cdjeb")
MapImg = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/PanelContainer/MarginContainer/TextureRect")
GameName = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/GameName")
GameType = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GameType")
GameDetails = NodePath("MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
text = "Game Name:"

[node name="GameName" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "noobs ONLY"

[node name="GameType" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Type"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jigxi")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture = ExtResource("1_40r2h")
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_4233d")

[node name="Details" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details/HSplitContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
text = "Suggested Players:"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details/HSplitContainer"]
layout_mode = 2
text = "Noobies"
horizontal_alignment = 2

[node name="HSplitContainer2" type="HSplitContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details/HSplitContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
text = "Map Size:"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details/HSplitContainer2"]
layout_mode = 2
text = "Small"
horizontal_alignment = 2

[node name="HSplitContainer3" type="HSplitContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details/HSplitContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
text = "Map Type:"

[node name="Label5" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/Details/HSplitContainer3"]
layout_mode = 2
text = "Taiga"
horizontal_alignment = 2
